--- a/appendix.tex
+++ b/appendix.tex
@@ -1,5 +1,7 @@
 \appendix
 \chapter{Appendix A}
+%\usepackage{setspace}
+%\doublespacing
 
 Do you need an Appendix?  You can include several of them if you want.
 
