--- a/chap_background.tex
+++ b/chap_background.tex
@@ -1,6 +1,8 @@
 \chapter{Background}
 \label{chap:background}
 
+\linespread{4}
+
 \section{Background}
 
 In this work, we investigate human computer interaction. 
