--- a/abstract.tex
+++ b/abstract.tex
@@ -1,10 +1,2 @@
-% In your thesis document, you should have a good abstract that can
-% answer the following questions: (1) What is the problem you worked
-% on, (2) Why is it interesting or motivation for working on this
-% problem, (3) How did you achieve the solution or What did you do?,
-% and (4) How well did your idea work out?
-
-This thesis examines the use of interactive immersive displays for
-exploiring urban design data. Exploratory interfaces that utilzes
-human center algorithms will convey more information.
+knjnj as dasd asd as das d asd as d as d asd 
 
