--- a/chap_intro.tex
+++ b/chap_intro.tex
@@ -1,7 +1,7 @@
 \chapter{Introduction}
 \label{chap:intro}
 
-It's always good to introduce your (1) problem, (2) why it is interesting, (3) what you did, and (4) roughly, 
+It's always good to introduce your (1) problem, (2) why it is interesting, (3) what you did, and (4) roughly, ssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss
 how well did it work. You might even have citations in here, as in this paper~\cite{Asawa:2008:TDT}.
 
 
